--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "slj_cv_site",
   "private": true,
   "version": "0.0.0",
   "homepage": "https://simonelj.github.io/slj_cv_site",
