--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slj_cv_site",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://simonelj.github.io/slj_cv_site",
+  "homepage": "https://simonelj.github.io/CV_site",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.30.3",
     "snarkdown": "^2.0.0",
     "tailwindcss": "^4.1.18"
   },
